--- a/papers/templates/layouts/base.html
+++ b/papers/templates/layouts/base.html
@@ -83,7 +83,7 @@
     box-shadow: 0 2px 8px 0 #0004 !important;
   }
 </style>
-<body class="bg-gray-100 font-sans text-gray-700">
+<body class="min-h-screen bg-gradient-to-br from-blue-50 via-white to-indigo-50">
     <div id="main-content" class="container mx-auto p-6">
         {% block content %}{% endblock %}
     </div>
