--- a/papers/templates/layouts/home.html
+++ b/papers/templates/layouts/home.html
@@ -41,7 +41,7 @@
     {% block extra_head %}{% endblock %}
     {% include 'components/navbar-no-search.html' %}
 </head>
-<body class="bg-gray-100">
+<body class="min-h-screen bg-gradient-to-br from-blue-50 via-white to-indigo-50">
     {% include 'components/marquee.html' %}
     <div id="main-content" class="container mx-auto p-6">
         {% block content %}{% endblock %}
