--- a/papers/templates/account/login.html
+++ b/papers/templates/account/login.html
@@ -3,15 +3,15 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <div class="max-w-md mx-auto mt-10 bg-white p-6 rounded shadow">
-    <h2 class="text-2xl font-bold mb-4">Login</h2>
+  <div class="max-w-md mx-auto mt-10 bg-white p-6 rounded-2xl border border-gray-400 shadow-xl">
+    <h2 class="text-2xl font-bold mb-4 flex justify-center">Login</h2>
     <form method="post" action="{% url 'account_login' %}">
       {% csrf_token %}
       {{ form|crispy }}
-      <button type="submit" class="mt-4 bg-neutral-900 text-white px-4 py-2 rounded">Login</button>
+      <button type="submit" class="mt-4 bg-neutral-900 text-white px-4 py-2 rounded-full w-full">Login</button>
     </form>
-    <p class="mt-4 text-sm">
-      Don't have an account? <a class="text-blue-500" href="{% url 'account_signup' %}">Sign up</a>
+    <p class="mt-4 text-sm flex justify-center gap-2 ">
+      Don't have an account? <a class="text-blue-500" href="{% url 'account_signup' %}"> Sign up</a>
     </p>
   </div>
 {% endblock %}
