--- a/papers/templates/layouts/base.html
+++ b/papers/templates/layouts/base.html
@@ -40,7 +40,9 @@
     ></script>
     {% load static %}
     {% block extra_head %}{% endblock %}
+    {% if not hide_navbar %}
     {% include 'components/navbar.html' %}
+    {% endif %}
 </head>
 <style>
   html.dark, html.dark body {
@@ -87,6 +89,7 @@
     <div id="main-content" class="container mx-auto p-6">
         {% block content %}{% endblock %}
     </div>
+    
 
     {% block extra_scripts %}{% endblock %}
     <!-- NProgress JS -->
